--- a/项目文件夹/pages/XDLPlatform/home/home.wxss
+++ b/项目文件夹/pages/XDLPlatform/home/home.wxss
@@ -3,15 +3,19 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  /* margin-top: 20px; */
+  /* margin-top: 0px; */
 }
+/* .login{
+  margin-top: 50rpx;
+  margin-left: 50rpx;
+  margin-right: 50rpx;
+} */
 .buttonstyle{
   width: 650rpx;
   height: 200rpx;
-  margin-top: 20rpx;
+  margin-top: 50rpx;
   margin-left: 50rpx;
   margin-right: 50rpx;
-  
 }
 .green{
   background-color: green;
